--- a/numpy_tutorial.ipynb
+++ b/numpy_tutorial.ipynb
@@ -10,12 +10,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dsg\n"
+      "hello developers\n"
      ]
     }
    ],
    "source": [
-    "print(\"dsg\")"
+    "print(\"hello developers\")"
    ]
   },
   {
@@ -586,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "id": "c11d2ba0-e4e1-4089-b2b3-65f31bb622b2",
    "metadata": {},
    "outputs": [
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "id": "cdb61e1b-3481-4fe8-947a-0c5fef96cebe",
    "metadata": {},
    "outputs": [
@@ -676,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "id": "e9811b05-02d1-438c-963d-9e21e142c090",
    "metadata": {},
    "outputs": [
@@ -729,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "id": "affa79fd-bb0a-48ca-95bd-c76c0ff399e2",
    "metadata": {},
    "outputs": [
@@ -763,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 9,
    "id": "86f6492f-9c97-4f32-9bae-04cf2f49fef4",
    "metadata": {},
    "outputs": [
@@ -799,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 10,
    "id": "8092db83-6d2c-426b-950d-aded5596488c",
    "metadata": {},
    "outputs": [
@@ -836,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 11,
    "id": "2aed77d4-2340-4a80-a2f6-e68750edceb1",
    "metadata": {},
    "outputs": [
@@ -861,6 +861,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "16a504db-12ab-4387-844d-da9160acc263",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "909f24c7-6ea3-4423-81ea-b0ed9738f11b",
    "metadata": {},
    "outputs": [],
    "source": []
