--- a/pandas/pandas.ipynb
+++ b/pandas/pandas.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "8978c4d9-75c7-47fc-bfbc-0986078cc828",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "29a14357-16f4-4cdf-8f88-21087433aa3a",
    "metadata": {},
    "outputs": [],
@@ -1891,7 +1891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 5,
    "id": "23039003-6618-4e90-b8f2-fd6752f235e3",
    "metadata": {},
    "outputs": [
@@ -2043,7 +2043,7 @@
        "10  10   Emily Davis  31.0     USA      NaN  58000.0"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2817,6 +2817,504 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0a095b9c-a115-4d0a-b717-252160af5e17",
+   "metadata": {},
+   "source": [
+    "# Feature Engineering"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "8c240a08-deaf-43a9-9e5d-75687e9c5ebb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     United States of America\n",
+       "1     United States of America\n",
+       "2                       Canada\n",
+       "3     United States of America\n",
+       "4                        Spain\n",
+       "5                        China\n",
+       "6                        India\n",
+       "7                          NaN\n",
+       "8     United States of America\n",
+       "9                       Mexico\n",
+       "10    United States of America\n",
+       "Name: country, dtype: object"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Transformation / Feature Engineering\n",
+    "df2 = df.copy()\n",
+    "\n",
+    "# apply a fnx to a row or col\n",
+    "df2[\"tax\"] = df2[\"income\"].apply(lambda x : \"10%\" if x < 60000 else \"20%\")\n",
+    "\n",
+    "# map values to another\n",
+    "new_gender_vals = {\"Male\": \"M\", \"Female\": \"F\", \"Unknown\": \"U\"}\n",
+    "df2[\"gender\"] = df2[\"gender\"].map(new_gender_vals)\n",
+    "\n",
+    "# assign some new values\n",
+    "df2.assign(new_income = df2[\"income\"] * 1.1)\n",
+    "\n",
+    "# replace specific values\n",
+    "df2[\"country\"].replace(\"USA\", \"United States of America\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "c9cf9b39-c6a5-4660-99b8-d5adde57b788",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Id</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Income</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Ranking</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>John Doe</td>\n",
+       "      <td>29.0</td>\n",
+       "      <td>55000.0</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>John Doe</td>\n",
+       "      <td>29.0</td>\n",
+       "      <td>55000.0</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Jane Smith</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>62000.0</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Canada</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Alex</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>47000.0</td>\n",
+       "      <td>Unknown</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>7.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Maria Garcia</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Spain</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Li Wei</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>51000.0</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>China</td>\n",
+       "      <td>6.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>6</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>73000.0</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>India</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>7</td>\n",
+       "      <td>Ahmed Khan</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>68000.0</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>8</td>\n",
+       "      <td>Rachel Lee</td>\n",
+       "      <td>29.0</td>\n",
+       "      <td>62000.0</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>9</td>\n",
+       "      <td>Carlos Ruiz</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>45000.0</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Mexico</td>\n",
+       "      <td>8.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>10</td>\n",
+       "      <td>Emily Davis</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>58000.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Id          Name   Age   Income   Gender Country  Ranking\n",
+       "0    1      John Doe  29.0  55000.0     Male     USA      5.0\n",
+       "1    1      John Doe  29.0  55000.0     Male     USA      5.0\n",
+       "2    2    Jane Smith   NaN  62000.0   Female  Canada      3.0\n",
+       "3    3          Alex   NaN  47000.0  Unknown     USA      7.0\n",
+       "4    4  Maria Garcia  34.0      NaN   Female   Spain      NaN\n",
+       "5    5        Li Wei  27.0  51000.0     Male   China      6.0\n",
+       "6    6           NaN  45.0  73000.0   Female   India      1.0\n",
+       "7    7    Ahmed Khan  38.0  68000.0     Male     NaN      2.0\n",
+       "8    8    Rachel Lee  29.0  62000.0   Female     USA      3.0\n",
+       "9    9   Carlos Ruiz   NaN  45000.0     Male  Mexico      8.0\n",
+       "10  10   Emily Davis  31.0  58000.0      NaN     USA      4.0"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Transformation - Sorting\n",
+    "df2 = df.copy()\n",
+    "\n",
+    "# Renaming\n",
+    "df2.columns = [\"Id\", \"Name\", \"Age\", \"Country\", \"Gender\", \"Income\"]\n",
+    "df2.rename(columns={\"Income\": \"Salary\"})\n",
+    "df2.rename(index={0: \"first\"})\n",
+    "\n",
+    "# Sorting - values & index\n",
+    "df2.sort_values(\"Income\")                     # sort values in ascending\n",
+    "df2.sort_values(\"Income\", ascending=False)    # sort values in descending\n",
+    "df2.sort_values([\"Age\", \"Income\"])            # sorts for age, if age is same then sorts for income \n",
+    "\n",
+    "sorted_df2 = df2.sort_values([\"Age\", \"Income\"])\n",
+    "sorted_df2.sort_index()\n",
+    "\n",
+    "# Reset Index\n",
+    "sorted_df2.reset_index()\n",
+    "sorted_df2.reset_index(drop=True)     # to drop original index vals\n",
+    "\n",
+    "# Ranking\n",
+    "df2[\"Ranking\"] = df2[\"Income\"].rank(ascending=False, method=\"dense\")\n",
+    "\n",
+    "# Reorder\n",
+    "df2[[\"Id\", \"Name\", \"Age\", \"Income\", \"Gender\", \"Country\", \"Ranking\"]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "0744a7c5-4c9b-4d17-a082-56bc6eba2107",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>age</th>\n",
+       "      <th>country</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>income</th>\n",
+       "      <th>id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>John Doe</td>\n",
+       "      <td>29.0</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>55000.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>John Doe</td>\n",
+       "      <td>29.0</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>55000.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Jane Smith</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Canada</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>62000.0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Alex</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>Unknown</td>\n",
+       "      <td>47000.0</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Maria Garcia</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>Spain</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Li Wei</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>China</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>51000.0</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>India</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>73000.0</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Ahmed Khan</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>68000.0</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Rachel Lee</td>\n",
+       "      <td>29.0</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>62000.0</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Carlos Ruiz</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Mexico</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>45000.0</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Emily Davis</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>58000.0</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            name   age country   gender   income  id\n",
+       "0       John Doe  29.0     USA     Male  55000.0   1\n",
+       "1       John Doe  29.0     USA     Male  55000.0   1\n",
+       "2     Jane Smith   NaN  Canada   Female  62000.0   2\n",
+       "3           Alex   NaN     USA  Unknown  47000.0   3\n",
+       "4   Maria Garcia  34.0   Spain   Female      NaN   4\n",
+       "5         Li Wei  27.0   China     Male  51000.0   5\n",
+       "6            NaN  45.0   India   Female  73000.0   6\n",
+       "7     Ahmed Khan  38.0     NaN     Male  68000.0   7\n",
+       "8     Rachel Lee  29.0     USA   Female  62000.0   8\n",
+       "9    Carlos Ruiz   NaN  Mexico     Male  45000.0   9\n",
+       "10   Emily Davis  31.0     USA      NaN  58000.0  10"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Task - shift id column to end\n",
+    "df2 = df.copy()\n",
+    "\n",
+    "new_col_order = [col for col in df.columns if col != \"id\"] + [\"id\"]\n",
+    "df2[new_col_order]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6d872d0e-99ed-4cea-b893-c84ef4bdccb8",
+   "metadata": {},
+   "source": [
+    "# Writing to csv files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "36e89119-da31-4280-a752-28edf1017e20",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\"id\":{\"9\":9,\"3\":3,\"5\":5,\"0\":1,\"10\":10,\"2\":2,\"8\":8,\"7\":7,\"6\":6,\"4\":4},\"name\":{\"9\":\"Carlos Ruiz\",\"3\":\"Alex\",\"5\":\"Li Wei\",\"0\":\"John Doe\",\"10\":\"Emily Davis\",\"2\":\"Jane Smith\",\"8\":\"Rachel Lee\",\"7\":\"Ahmed Khan\",\"6\":null,\"4\":\"Maria Garcia\"},\"age\":{\"9\":null,\"3\":null,\"5\":27.0,\"0\":29.0,\"10\":31.0,\"2\":null,\"8\":29.0,\"7\":38.0,\"6\":45.0,\"4\":34.0},\"country\":{\"9\":\"Mexico\",\"3\":\"USA\",\"5\":\"China\",\"0\":\"USA\",\"10\":\"USA\",\"2\":\"Canada\",\"8\":\"USA\",\"7\":null,\"6\":\"India\",\"4\":\"Spain\"},\"gender\":{\"9\":\"Male\",\"3\":\"Unknown\",\"5\":\"Male\",\"0\":\"Male\",\"10\":null,\"2\":\"Female\",\"8\":\"Female\",\"7\":\"Male\",\"6\":\"Female\",\"4\":\"Female\"},\"income\":{\"9\":45000.0,\"3\":47000.0,\"5\":51000.0,\"0\":55000.0,\"10\":58000.0,\"2\":62000.0,\"8\":62000.0,\"7\":68000.0,\"6\":73000.0,\"4\":null}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Writing to csv files\n",
+    "df = pd.read_csv(\"raw_data.csv\") \n",
+    "\n",
+    "df.drop_duplicates(inplace=True)\n",
+    "df.sort_values(\"income\", inplace=True)\n",
+    "\n",
+    "df.to_csv(\"sorted_data.csv\")   # to preserve index\n",
+    "df.to_csv(\"sorted_data.csv\", index=False)   # to renew index\n",
+    "\n",
+    "json_string = df.to_json()\n",
+    "print(json_string)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "0760cede-530a-4701-b9d3-6bd7a343d478",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hjdfgljh\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"hjdfgljh\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fb9acded-0cbf-4a3b-ad4d-00dbb411b5eb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ff30e205-75bc-4493-b9d1-0d74601bf8d8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4e2415e6-308c-4229-a722-0fb68cfe4988",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": 86,
    "id": "1edadcab-f4cf-4968-9f69-8ec178abfabf",
@@ -2839,6 +3337,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "9991ef24-0f2c-4597-af58-42545747aa23",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "57f3ef30-af0b-4750-830a-43e515b20a0b",
    "metadata": {},
    "outputs": [],
@@ -2850,6 +3356,30 @@
     "\n",
     "print(response.content)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3dca0fb9-188d-4048-8176-be5b2dd0313d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "15b9572c-0dfc-4a87-ada6-eadcc15eeba1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "92ac5687-f788-4758-ba8c-1e69d32e6a24",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
